cabal-version:       2.4
name:                CycloneDDS-Haskell
version:             0.1.0.0
synopsis:            Haskell binding for Eclipse Cyclone DDS
homepage:            https://github.com/githubuser/cars#readme
license:             EPL-2.0 OR BSD-3-Clause
license-file:        LICENSE
author:              Erik Boasson
maintainer:          eb@ilities.com
copyright:           (c) 2021 Erik Boasson
category:            Web
build-type:          Custom

custom-setup
  setup-depends:
    base >= 4.5,
    Cabal >= 1.24,
    process >= 1.6

library
  exposed-modules:     CycloneDDS, CycloneDDS.TopicDescriptor, CycloneDDS.BaseTypes, CycloneDDS.SampleInfo, CycloneDDS.Serdata, CycloneDDS.Serdata.Raw
  hs-source-dirs:      dds
  include-dirs:        /Users/erik/C/cdds/CC/install/include
  extra-lib-dirs:      /Users/erik/C/cdds/CC/install/lib
  extra-libraries:     ddsc
  -- -optc-Wno-... to suppress some warnings from "foreing import capi"-generated code
  ghc-options:         -Wall -dynamic -optc-Wno-int-conversion -optc-Wno-incompatible-pointer-types
  build-depends:       base, c-storable-deriving >= 0.1.3, fixed-vector >= 1.2, unix-bytestring >= 0.3.7.3, bytestring >= 0.10.12, cereal >= 0.5.8.1
  --build-tools:         c2hs
  default-language:    Haskell2010
  default-extensions:  ForeignFunctionInterface

executable pp
  main-is:             Participant.hs
  other-modules:       OneULong, KeyedSeq
  c-sources:           examples/x.c
  include-dirs:
    examples
    /Users/erik/C/cdds/CC/install/include
  hs-source-dirs:      examples
  build-depends:       base, CycloneDDS-Haskell, cereal >= 0.5.8.1
  ghc-options:         -Wall -dynamic -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
